@@ -13,6 +13,8 @@ PHP                                                                        NEWS
   . Fixed bug #70214 (FASYNC not defined, needs sys/file.h include). (Bob)
 
 - Standard:
+  . Fixed bug #70211 (php 7 ZEND_HASH_IF_FULL_DO_RESIZE use after free).
+    (Laruence)
   . Fixed bug #70208 (Assert breaking access on objects). (Bob)
 
 06 Aug 2015, PHP 7.0.0 Beta 3
